practice/yacc_lex/y.output
Grammar

    0 $accept: E $end

    1 E: E plus T
    2  | T

    3 T: T mult F
    4  | F

    5 F: NUM


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM (258) 5
    plus (259) 1
    mult (260) 3


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    E (7)
        on left: 1 2
        on right: 0 1
    T (8)
        on left: 3 4
        on right: 1 2 3
    F (9)
        on left: 5
        on right: 3 4


State 0

    0 $accept: • E $end

    NUM  shift, and go to state 1

    E  go to state 2
    T  go to state 3
    F  go to state 4


State 1

    5 F: NUM •

    $default  reduce using rule 5 (F)


State 2

    0 $accept: E • $end
    1 E: E • plus T

    $end  shift, and go to state 5
    plus  shift, and go to state 6


State 3

    2 E: T •
    3 T: T • mult F

    mult  shift, and go to state 7

    $default  reduce using rule 2 (E)


State 4

    4 T: F •

    $default  reduce using rule 4 (T)


State 5

    0 $accept: E $end •

    $default  accept


State 6

    1 E: E plus • T

    NUM  shift, and go to state 1

    T  go to state 8
    F  go to state 4


State 7

    3 T: T mult • F

    NUM  shift, and go to state 1

    F  go to state 9


State 8

    1 E: E plus T •
    3 T: T • mult F

    mult  shift, and go to state 7

    $default  reduce using rule 1 (E)


State 9

    3 T: T mult F •

    $default  reduce using rule 3 (T)
